WIP BigQuery output plugin.
Utilize the BigQuery streaming insert API to push log entries directly
into BigQuery.

TODO: Much of the code is copy-pasted from the Stackdriver Logging
output plugin, so there is some refactoring to do to create a standard
Google Cloud authorization API.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -97,6 +97,7 @@ option(FLB_IN_SYSTEMD      "Enable Systemd input plugin"        Yes)
 option(FLB_IN_DUMMY        "Enable Dummy input plugin"          Yes)
 option(FLB_IN_NETIF        "Enable NetworkIF input plugin"      Yes)
 option(FLB_OUT_AZURE       "Enable Azure output plugin"         Yes)
+option(FLB_OUT_BIGQUERY    "Enable BigQuery output plugin"      Yes)
 option(FLB_OUT_COUNTER     "Enable Counter output plugin"       Yes)
 option(FLB_OUT_ES          "Enable Elasticsearch output plugin" Yes)
 option(FLB_OUT_EXIT        "Enable Exit output plugin"          Yes)
